Refactoring of simulator. Created a dictionary for the bots (to prefent double ID's to occur) and tweaked the create pairing logic.

--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -48,6 +48,7 @@
     <Compile Include="BattlePairing.cs" />
     <Compile Include="BattleSimulation.cs" />
     <Compile Include="BattleSimulator.cs" />
+    <Compile Include="Bots.cs" />
     <Compile Include="Conversion\EloTypeConverter.cs" />
     <Compile Include="Elo.cs" />
     <Compile Include="EloExtensions.cs" />
