--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Blocks\BlockRotationTest.cs" />
     <Compile Include="Blocks\BlockTUturnTest.cs" />
     <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
+    <Compile Include="Evaluation\EvaluatorParametersTest.cs" />
     <Compile Include="Genetics\ParameterRandomizerTest.cs" />
     <Compile Include="TestData.cs" />
     <EmbeddedResource Include="Communication\input.version0016.txt" />
@@ -62,7 +63,7 @@
     <Compile Include="DecisionMaking\PerformanceTest.cs" />
     <Compile Include="Deployoment\Deployer.cs" />
     <Compile Include="Deployoment\DeployerTest.cs" />
-    <Compile Include="Evaluation\ComplexEvaluatorTest.cs" />
+    <Compile Include="Evaluation\EvaluatorTest.cs" />
     <Compile Include="Generation\MoveGeneratorGetFieldsTest.cs" />
     <Compile Include="Generation\MoveGeneratorGetMovesTest.cs" />
     <Compile Include="Generation\MoveGeneratorTest.cs" />
