--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Bits.cs" />
