Re-introduced garbage in the evaluation, using the worst outcome of the current block, and detectacting potential win on the current block.

--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -93,6 +93,8 @@
     <Compile Include="DecisionMaking\NodeDecisionMaker.cs" />
     <Compile Include="Evaluation\EvaluatorParameters.cs" />
     <Compile Include="Evaluation\Evaluator.cs" />
+    <Compile Include="Evaluation\OpponentEvaluation.cs" />
+    <Compile Include="Evaluation\OpponentEvaluator.cs" />
     <Compile Include="Evaluation\ParameterType.cs" />
     <Compile Include="Generation\IFieldGenerator.cs" />
     <Compile Include="Generation\IMoveGenerator.cs" />
