fixed path to NUnit package.

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -31,7 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="nunit.framework">
-      <HintPath>..\AIGames.BlockBattle.Kubisme\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
+      <HintPath>..\packages\NUnit.2.6.4\lib\nunit.framework.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
