--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -105,8 +105,10 @@
     <Compile Include="Models\Position.cs" />
     <Compile Include="Models\Field.cs" />
     <Compile Include="Models\Row.cs" />
+    <Compile Include="PlyLog.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scores.cs" />
     <Compile Include="Troschuetz.Random\MT19937Generator.cs" />
   </ItemGroup>
   <ItemGroup>
