--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
     <Compile Include="Evaluation\EvaluatorParametersTest.cs" />
     <Compile Include="Evaluation\OpponentEvaluatorTest.cs" />
+    <Compile Include="Genetics\SimulationBotCollectionTest.cs" />
     <Compile Include="Genetics\ParameterRandomizerTest.cs" />
     <Compile Include="TestData.cs" />
     <EmbeddedResource Include="Communication\input.version0016.txt" />
