--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Blocks\BlockRotationTest.cs" />
     <Compile Include="Blocks\BlockTUturnTest.cs" />
     <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
+    <Compile Include="Evaluation\BenchmarkTest.cs" />
     <Compile Include="Evaluation\EvaluatorParametersTest.cs" />
     <Compile Include="Evaluation\OpponentEvaluatorTest.cs" />
     <Compile Include="Genetics\SimulationBotCollectionTest.cs" />
