Moved UnitTest for T-Spin

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -46,15 +46,17 @@
     <Compile Include="Blocks\BlockITest.cs" />
     <Compile Include="Blocks\BlockOTest.cs" />
     <Compile Include="Blocks\BlockRotationTest.cs" />
-    <Compile Include="Blocks\BlockTUturnTest.cs" />
+    <Compile Include="Blocks\BlockTTest.cs" />
     <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
     <Compile Include="Evaluation\BenchmarkTest.cs" />
     <Compile Include="Evaluation\EvaluatorParametersTest.cs" />
     <Compile Include="Evaluation\OpponentEvaluatorTest.cs" />
+    <Compile Include="FieldAssert.cs" />
     <Compile Include="Genetics\SimulationBotCollectionTest.cs" />
     <Compile Include="Genetics\ParameterRandomizerTest.cs" />
     <Compile Include="ScoresTest.cs" />
     <Compile Include="TestData.cs" />
+    <Compile Include="TestField.cs" />
     <EmbeddedResource Include="Communication\input.version0016.txt" />
     <EmbeddedResource Include="Communication\input.version0017.txt" />
     <Compile Include="BitsTest.cs" />
