UT config is now available as example.

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -81,6 +81,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="App.config.xample" />
     <EmbeddedResource Include="Communication\input.simple.txt" />
     <Compile Include="Communication\ConsolePlatformTester.cs" />
     <None Include="packages.config" />
