--- a/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.Genetics/AIGames.BlockBattle.Kubisme.Genetics.csproj
@@ -52,11 +52,14 @@
     <Compile Include="BattlePairing.cs" />
     <Compile Include="BattleSimulation.cs" />
     <Compile Include="BattleSimulator.cs" />
+    <Compile Include="BlockBattleScore.cs" />
     <Compile Include="Bots.cs" />
+    <Compile Include="BotStats.cs" />
     <Compile Include="FieldVisualizer.cs" />
     <Compile Include="ParameterRandomizer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ScoreDetector.cs" />
     <Compile Include="Serialization\SimulationBotCollection.cs" />
     <Compile Include="BotData.cs" />
   </ItemGroup>
