Fixed a bug in applying the lock row.

--- a/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
+++ b/src/AIGames.BlockBattle.Kubisme.UnitTests/AIGames.BlockBattle.Kubisme.UnitTests.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Blocks\BlockOTest.cs" />
     <Compile Include="Blocks\BlockRotationTest.cs" />
     <Compile Include="Blocks\BlockTTest.cs" />
+    <Compile Include="DecisionMaking\BlockNodeTest.cs" />
     <Compile Include="DecisionMaking\NodeDecisionMakerTester.cs" />
     <Compile Include="Evaluation\BenchmarkTest.cs" />
     <Compile Include="Evaluation\EvaluatorParametersTest.cs" />
