--- a/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
+++ b/src/AIGames.BlockBattle.Kubisme/AIGames.BlockBattle.Kubisme.csproj
@@ -1,132 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{C0B84D98-8285-4A46-BA15-911597172A9A}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>AIGames.BlockBattle.Kubisme</RootNamespace>
-    <AssemblyName>Kubisme</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <Version>83.0.0</Version>
+    <Copyright>Copyright © Corniel Nobel, 2015</Copyright>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <Description>AI that plays the AIGames.org Block Battle.</Description>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.XML" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Bits.cs" />
-    <Compile Include="Blocks\Block.cs" />
-    <Compile Include="Blocks\BlockI.cs" />
-    <Compile Include="Blocks\BlockILeft.cs" />
-    <Compile Include="Blocks\BlockIRight.cs" />
-    <Compile Include="Blocks\BlockIUturn.cs" />
-    <Compile Include="Blocks\BlockJ.cs" />
-    <Compile Include="Blocks\BlockL.cs" />
-    <Compile Include="Blocks\BlockO.cs" />
-    <Compile Include="Blocks\BlockS.cs" />
-    <Compile Include="Blocks\BlockSLeft.cs" />
-    <Compile Include="Blocks\BlockSRight.cs" />
-    <Compile Include="Blocks\BlockSUturn.cs" />
-    <Compile Include="Blocks\BlockT.cs" />
-    <Compile Include="Blocks\BlockTUturn.cs" />
-    <Compile Include="Blocks\BlockZ.cs" />
-    <Compile Include="Blocks\BlockZLeft.cs" />
-    <Compile Include="Blocks\BlockZRight.cs" />
-    <Compile Include="Blocks\BlockZUturn.cs" />
-    <Compile Include="Blocks\BlockTLeft.cs" />
-    <Compile Include="Blocks\BlockTRight.cs" />
-    <Compile Include="Communication\BotResponse.cs" />
-    <Compile Include="Communication\ActionType.cs" />
-    <Compile Include="Communication\IBot.cs" />
-    <Compile Include="Communication\Instruction.cs" />
-    <Compile Include="Communication\IInstruction.cs" />
-    <Compile Include="Communication\Instruction.Move.Request.cs" />
-    <Compile Include="Communication\Instruction.Settings.cs" />
-    <Compile Include="Communication\Instruction.Settings.YourBot.cs" />
-    <Compile Include="Communication\Instruction.Update.cs" />
-    <Compile Include="Communication\Instruction.Update.Player.Skips.cs" />
-    <Compile Include="Communication\Instruction.Update.Player.Combo.cs" />
-    <Compile Include="Communication\Instruction.Update.Player.Field.cs" />
-    <Compile Include="Communication\Instruction.Update.Player.RowPoints.cs" />
-    <Compile Include="Communication\Instruction.Update.Player.cs" />
-    <Compile Include="Communication\Instruction.Update.Game.cs" />
-    <Compile Include="Communication\Instruction.Update.Game.ThisPiece.cs" />
-    <Compile Include="Communication\Instruction.Update.Game.Round.cs" />
-    <Compile Include="Communication\Instruction.Move.cs" />
-    <Compile Include="Communication\PieceType.cs" />
-    <Compile Include="Communication\PlayerName.cs" />
-    <Compile Include="Communication\GameState.cs" />
-    <Compile Include="Communication\PlayerNames.cs" />
-    <Compile Include="Communication\Settings.cs" />
-    <Compile Include="Communication\ConsolePlatform.cs" />
-    <Compile Include="DecisionMaking\ApplyParameters.cs" />
-    <Compile Include="DecisionMaking\Block1Node.cs" />
-    <Compile Include="DecisionMaking\BlockNode.cs" />
-    <Compile Include="DecisionMaking\BlockNodes.cs" />
-    <Compile Include="DecisionMaking\BlockNode_.cs" />
-    <Compile Include="DecisionMaking\BlockPath.cs" />
-    <Compile Include="DecisionMaking\BlockRndNode.cs" />
-    <Compile Include="DecisionMaking\BlockRootNode.cs" />
-    <Compile Include="DecisionMaking\IBlockNode.cs" />
-    <Compile Include="DecisionMaking\IDecisionMaker.cs" />
-    <Compile Include="DecisionMaking\NodeDecisionMaker.cs" />
-    <Compile Include="Evaluation\EvaluatorParameters.cs" />
-    <Compile Include="Evaluation\Evaluator.cs" />
-    <Compile Include="Evaluation\OpponentEvaluation.cs" />
-    <Compile Include="Evaluation\OpponentEvaluator.cs" />
-    <Compile Include="Evaluation\ParamCurve.cs" />
-    <Compile Include="Evaluation\ParameterType.cs" />
-    <Compile Include="Generation\IFieldGenerator.cs" />
-    <Compile Include="Generation\IMoveGenerator.cs" />
-    <Compile Include="Generation\MoveGenerator.cs" />
-    <Compile Include="Generation\TempPath.cs" />
-    <Compile Include="KubismeBot.cs" />
-    <Compile Include="Models\MoveCandiate.cs" />
-    <Compile Include="Models\Position.cs" />
-    <Compile Include="Models\Field.cs" />
-    <Compile Include="Models\Row.cs" />
-    <Compile Include="PlyLog.cs" />
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Scores.cs" />
-    <Compile Include="Troschuetz.Random\MT19937Generator.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Communication\Instruction.Update.Game.NextPiece.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Communication\Instruction.Update.Game.ThisPiecePosition.cs" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+
 </Project>
